added the screen modest

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3c5dd302ea.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_header.css">
+    <link rel="stylesheet" href="style_part1.css">
+    <link rel="stylesheet" href="style_modest.css">
 </head>
 
 <body>
@@ -53,9 +56,78 @@
     <main>
         <section class="about">
             <div class="container">
-                <div class="row"></div>
+                <div class="row">
+
+                    <div class="col-xs-12 col-sm-7 flex-direction-column">
+                        <div class="patr1-welcome">
+                            WELCOME TO OUR MARKETPLACE
+                        </div>
+                        <div class="part1-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                            dicta
+                            vitae architecto earum. Quo nulla iure consectetur repellendus, provident id ipsam sapiente
+                        </div>
+                        <div class="part1-buttons-frame">
+                            <a class="part1-buttons part1-buttons-size" href="#">VIEW MORE</a>
+                            <a class="part1-buttons part1-buttons-size" href="#">VIDEO TOUR</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-5"></div>
+                    <!-- <div class="col-md-5"></div> -->
+                </div>
+
             </div>
         </section>
+
+        <section class="modest">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-xs-12 col-sm-7">
+                        <div class="modest-title">
+                            WE ARE MODEST
+                        </div>
+                        <div class="modest-desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Corporis inventore incidunt et, temporibus optio voluptate molestias error harum neque
+                            perspiciatis, rerum nemo culpa. Ab voluptas inventore, est voluptatem natus qui?
+                        </div>
+                        <div class="modest-desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Corporis inventore incidunt et, temporibus optio voluptate molestias error harum neque
+                            perspiciatis, rerum nemo culpa. Ab voluptas inventore, est voluptatem natus qui?
+                        </div>
+                        <div class="modest-frame-social">
+                            <div>
+                                <i class="fab fa-facebook-f"></i>
+                            </div>
+                            <div>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                            <div>
+                                <i>g</i>
+                            </div>
+                            <div>
+                                <i class="fab fa-dribbble"></i>
+                            </div>
+                            <div>
+                                <i class="fab fa-behance"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-5 modest-column2-margin">
+                        <ul class="modest-right-size-list-item">
+                            <li>
+                                <div class="modest-number-square">01</div>
+                                <div class="modest-list-title">Dedication to the customers</div>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- <div class="col-md-5"></div> -->
+                </div>
+
+            </div>
+        </section>
+
     </main>
 </body>
 
