Finished the modest page

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
         <section class="modest">
             <div class="container">
+                <div class="modest-title">
+                    WE ARE MODEST
+                </div>
                 <div class="row">
-
                     <div class="col-xs-12 col-sm-7">
-                        <div class="modest-title">
-                            WE ARE MODEST
-                        </div>
+
                         <div class="modest-desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             Corporis inventore incidunt et, temporibus optio voluptate molestias error harum neque
                             perspiciatis, rerum nemo culpa. Ab voluptas inventore, est voluptatem natus qui?
@@ -113,11 +113,28 @@
 
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-5 modest-column2-margin">
+                    <div class="col-xs-12 col-sm-5">
                         <ul class="modest-right-size-list-item">
                             <li>
                                 <div class="modest-number-square">01</div>
-                                <div class="modest-list-title">Dedication to the customers</div>
+                                <div class="modest-list-item-text-frame">
+                                    <div class="modest-list-title">Dedication to the customers</div>
+                                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="modest-number-square">02</div>
+                                <div class="modest-list-item-text-frame">
+                                    <div class="modest-list-title">working closely with our clients</div>
+                                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="modest-number-square">03</div>
+                                <div class="modest-list-item-text-frame">
+                                    <div class="modest-list-title">increase happiness</div>
+                                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                </div>
                             </li>
                         </ul>
 
