Beginning the team page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog project</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style_header.css">
     <link rel="stylesheet" href="style_part1.css">
     <link rel="stylesheet" href="style_modest.css">
+    <link rel="stylesheet" href="style_team.css">
 </head>
 
 <body>
@@ -78,9 +79,9 @@
             </div>
         </section>
 
-        <section class="modest">
+        <section class="pages-frame">
             <div class="container">
-                <div class="modest-title">
+                <div class="pages-title">
                     WE ARE MODEST
                 </div>
                 <div class="row">
@@ -138,6 +139,28 @@
                             </li>
                         </ul>
 
+                    </div>
+                    <!-- <div class="col-md-5"></div> -->
+                </div>
+
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="pages-frame">
+            <div class="container">
+                <div class="pages-title">
+                    Meet the team
+                </div>
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3">
+                        <div class="team-face-image">
+                        </div>
+                        <div class="team-face-description-frame">
+                            <div class="team-face-title-name">Gloria Bromley</div>
+                            <div>CEO and Founder</div>
+                        </div>
                     </div>
                     <!-- <div class="col-md-5"></div> -->
                 </div>
