Finished the team page

--- a/index.html
+++ b/index.html
@@ -154,15 +154,86 @@
                     Meet the team
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 col-sm-3">
-                        <div class="team-face-image">
-                        </div>
-                        <div class="team-face-description-frame">
-                            <div class="team-face-title-name">Gloria Bromley</div>
-                            <div>CEO and Founder</div>
+                    <!-- 1 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="team-frame">
+                            <div class="team-face-image face-image1">
+                                <div>
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-twitter"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="team-face-description-frame">
+                                <div class="team-face-title-name">Gloria Bromley</div>
+                                <div>CEO and Founder</div>
+                            </div>
                         </div>
                     </div>
-                    <!-- <div class="col-md-5"></div> -->
+                    <!-- 2 фото -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="team-frame">
+                            <div class="team-face-image face-image2">
+                                <div>
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-twitter"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="team-face-description-frame">
+                                <div class="team-face-title-name">Paul Torres</div>
+                                <div>Head of Development</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3 фото -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="team-frame">
+                            <div class="team-face-image face-image3">
+                                <div>
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-twitter"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="team-face-description-frame">
+                                <div class="team-face-title-name">Judith Gillette</div>
+                                <div>Graphic Desinger</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 4 фото -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="team-frame">
+                            <div class="team-face-image face-image4">
+                                <div>
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-twitter"></i>
+                                </div>
+                                <div>
+                                    <i class="fab fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="team-face-description-frame">
+                                <div class="team-face-title-name">Delores Reed</div>
+                                <div>Client Service Director</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
