Added the lovely screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style_part1.css">
     <link rel="stylesheet" href="style_modest.css">
     <link rel="stylesheet" href="style_team.css">
+    <link rel="stylesheet" href="style_lovely.css">
 </head>
 
 <body>
@@ -239,6 +240,64 @@
             </div>
         </section>
 
+        <section class="pages-frame lovely-background">
+            <div class="container">
+                <div class="pages-title color-white">
+                    lovely work
+                </div>
+                <div class="row">
+                    <!-- 1 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image1">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image2">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image3">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 4 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image4">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>  
+                    <!-- 5 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image5">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>   
+                    <!-- 6 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="lovely-image-frame lovely-image6">
+                            <div class="lovely-image-title">
+                                partnership guidlines
+                            </div>
+                        </div>
+                    </div>                                                       
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
 
