Added the button show me more

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                             vitae architecto earum. Quo nulla iure consectetur repellendus, provident id ipsam sapiente
                         </div>
                         <div class="part1-buttons-frame">
-                            <a class="part1-buttons part1-buttons-size" href="#">VIEW MORE</a>
-                            <a class="part1-buttons part1-buttons-size" href="#">VIDEO TOUR</a>
+                            <a class="buttons buttons-size" href="#">VIEW MORE</a>
+                            <a class="buttons buttons-size" href="#">VIDEO TOUR</a>
                         </div>
                     </div>
                     <div class="col-sm-5"></div>
@@ -295,6 +295,7 @@
                         </div>
                     </div>                                                       
                 </div>
+                <a class="buttons buttons-size button-margin-center" href="#">show me more</a>
 
             </div>
         </section>
