--- a/index.html
+++ b/index.html
@@ -299,6 +299,25 @@
 
             </div>
         </section>
+
+        <section class="pages-frame">
+            <div class="container">
+                <div class="pages-title">
+                    What we do
+                </div>
+                <div class="row">
+                    <!-- 1 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="team-frame">
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
 </body>
 
