--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="style_modest.css">
     <link rel="stylesheet" href="style_team.css">
     <link rel="stylesheet" href="style_lovely.css">
+    <link rel="stylesheet" href="style_what-we-do.css">
+    <link rel="stylesheet" href="style_modal.css">
 </head>
 
 <body>
@@ -277,7 +279,7 @@
                                 partnership guidlines
                             </div>
                         </div>
-                    </div>  
+                    </div>
                     <!-- 5 фото  -->
                     <div class="col-xs-12 col-sm-6 col-xl-4">
                         <div class="lovely-image-frame lovely-image5">
@@ -285,7 +287,7 @@
                                 partnership guidlines
                             </div>
                         </div>
-                    </div>   
+                    </div>
                     <!-- 6 фото  -->
                     <div class="col-xs-12 col-sm-6 col-xl-4">
                         <div class="lovely-image-frame lovely-image6">
@@ -293,7 +295,7 @@
                                 partnership guidlines
                             </div>
                         </div>
-                    </div>                                                       
+                    </div>
                 </div>
                 <a class="buttons buttons-size button-margin-center" href="#">show me more</a>
 
@@ -308,15 +310,101 @@
                 <div class="row">
                     <!-- 1 -->
                     <div class="col-xs-12 col-sm-6 col-xl-3">
-                        <div class="team-frame">
-
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image1"></div>
+                            <div class="what-we-do-title">What we do</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
                         </div>
                     </div>
-
+                    <!-- 2 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image2"></div>
+                            <div class="what-we-do-title">Pixel perfect design</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                    <!-- 3-->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image3"></div>
+                            <div class="what-we-do-title">Responsive display</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                    <!-- 4 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image4"></div>
+                            <div class="what-we-do-title">24/7 Support</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
                 </div>
-
+                <div class="row">
+                    <!-- 21 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image1"></div>
+                            <div class="what-we-do-title">What we do</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                    <!-- 22 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image2"></div>
+                            <div class="what-we-do-title">Pixel perfect design</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                    <!-- 23-->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image3"></div>
+                            <div class="what-we-do-title">Responsive display</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                    <!-- 24 -->
+                    <div class="col-xs-12 col-sm-6 col-xl-3">
+                        <div class="what-we-do-frame">
+                            <div class="what-we-do-image-frame what-we-do-image4"></div>
+                            <div class="what-we-do-title">24/7 Support</div>
+                            <div class="what-we-do-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                At non animi eaque, labore sint temporibus commodi?</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
+
+        <div class="modal">
+            <div class="modal-block">
+                <form>
+                    <div class="btn-close">X</div>
+                    <h3>Please call for more details</h3>
+                    <div class="form-fields">
+                        <input type="text" placeholder="Your name">
+                    </div>
+                    <div class="form-fields">
+                        <input type="text" placeholder="Your phone">
+                    </div>
+                    <button>Please call</button>
+                </form>
+
+            </div>
+        </div>
+
+        <script src="app.js"></script>
 
     </main>
 </body>
