--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,700;1,400&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/3c5dd302ea.js" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_grid.css">
     <link rel="stylesheet" href="style_header.css">
     <link rel="stylesheet" href="style_part1.css">
     <link rel="stylesheet" href="style_modest.css">
@@ -19,6 +23,7 @@
     <link rel="stylesheet" href="style_lovely.css">
     <link rel="stylesheet" href="style_what-we-do.css">
     <link rel="stylesheet" href="style_modal.css">
+    <link rel="stylesheet" href="style_features.css">
 </head>
 
 <body>
@@ -89,12 +94,12 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-7">
-
                         <div class="modest-desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             Corporis inventore incidunt et, temporibus optio voluptate molestias error harum neque
                             perspiciatis, rerum nemo culpa. Ab voluptas inventore, est voluptatem natus qui?
                         </div>
-                        <div class="modest-desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        <div class="modest-desctription">Lorem ipsum, dolor sit amet <span style="font-weight: bold;">
+                                consectetur adipisicing elit.</span>
                             Corporis inventore incidunt et, temporibus optio voluptate molestias error harum neque
                             perspiciatis, rerum nemo culpa. Ab voluptas inventore, est voluptatem natus qui?
                         </div>
@@ -384,6 +389,83 @@
                     </div>
                 </div>
             </div>
+            </div>
+        </section>
+
+
+        <section class="pages-frame features-background">
+            <div class="container">
+                <div class="pages-title color-white">
+                    Features
+                </div>
+                <div class="row">
+                    <!-- 1 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="features-image-frame features-image1">
+                        </div>
+                        <div class="features-title">
+                            Product Design: Eames Chairs
+                        </div>
+                        <div class="features-description">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nostrum veniam dolorem?
+                            Delectus voluptate quis, rem magni alias,
+                        </div>
+                    </div>
+                    <!-- 2 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="features-image-frame features-image2">
+                        </div>
+                        <div class="features-title">
+                            Product Design: Eames Chairs
+                        </div>
+                        <div class="features-description">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nostrum veniam dolorem?
+                            Delectus voluptate quis, rem magni alias,
+                        </div>
+                    </div>
+                    <!-- 3 фото  -->
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <div class="features-image-frame features-image3">
+                        </div>
+                        <div class="features-title">
+                            Product Design: Eames Chairs
+                        </div>
+                        <div class="features-description">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nostrum veniam dolorem?
+                            Delectus voluptate quis, rem magni alias,
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="pages-frame">
+            <div class="container">
+                <div class="pages-title">
+                    Stay in touch
+                </div>
+            </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d175899.8546382799!2d30.571704305882903!3d46.459886488269255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c6318a0b864c43%3A0x129f8fe28cf2176c!2z0J7QtNC10YHRgdCwLCDQntC00LXRgdGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA2NTAwMA!5e0!3m2!1sru!2sua!4v1624009897313!5m2!1sru!2sua"
+                width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="contact-information-title">
+                            Contact information
+                        </div>
+                        <div class="contact-information-description">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic voluptatibus velit architecto nihil ex doloremque magni illo culpa mollitia, fugit fugiat eveniet inventore! Quas dolores animi, natus est harum repellat.
+                        </div>
+                        <div class="contact-information-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos placeat totam itaque ipsa,
+                        </div>
+
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                    </div>
+                </div>
             </div>
         </section>
 
