Added js with nav menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/3c5dd302ea.js" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_grid.css">
@@ -38,7 +37,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-7">
-                    <nav>
+                    <nav class="navigation">
                         <ul class="header-menu">
                             <li><a href="#">HOME</a></li>
                             <li><a href="#">ABOUT</a></li>
@@ -49,6 +48,11 @@
 
                         </ul>
                     </nav>
+                    <div class="nav-mobile-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="col-xs-hidden col-sm-2">
                     <div class="header-frame-search">
