Added the mobile menu with listener

--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-3">
-                    <div class="logo">
-                        <a href="">
-                            <img src="blog_pics/logo.png" alt="Logo">
-                        </a>
+                    <div class="logo-frame">
+                        <div class="logo">
+                            <a href="">
+                                <img src="blog_pics/logo.png" alt="Logo">
+                            </a>
+                        </div>
+                        <div class="nav-mobile-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-7">
@@ -45,15 +52,12 @@
                             <li><a href="#">TEAM</a></li>
                             <li><a href="#">FEATURES</a></li>
                             <li><a href="#">SERVICES</a></li>
-
                         </ul>
                     </nav>
-                    <div class="nav-mobile-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+
                 </div>
+                <div class="close-nav-menu"></div>
+
                 <div class="col-xs-hidden col-sm-2">
                     <div class="header-frame-search">
                         <div class="header-input-search">
@@ -460,7 +464,9 @@
                             Contact information
                         </div>
                         <div class="contact-information-description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic voluptatibus velit architecto nihil ex doloremque magni illo culpa mollitia, fugit fugiat eveniet inventore! Quas dolores animi, natus est harum repellat.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic voluptatibus velit architecto
+                            nihil ex doloremque magni illo culpa mollitia, fugit fugiat eveniet inventore! Quas dolores
+                            animi, natus est harum repellat.
                         </div>
                         <div class="contact-information-description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos placeat totam itaque ipsa,
